crates/rtd-core/src/authority/snapshots/rtd_core__authority__execution_time_estimator__tests__execution_time_observer_v137.snap
---
source: crates/rtd-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 137
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 0
          - ~
        - - 4
          - secs: 0
            nanos: 28000000
        - - 5
          - secs: 0
            nanos: 19000000
        - - 1
          - secs: 0
            nanos: 25000000
      stake_weighted_median:
        secs: 0
        nanos: 25000000
  - - MergeCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 63000000
        - - 10
          - secs: 0
            nanos: 68000000
        - - 8
          - secs: 0
            nanos: 45000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 63000000
  - - SplitCoins
    - observations:
        - - 0
          - ~
        - - 10
          - secs: 0
            nanos: 52000000
        - - 5
          - secs: 0
            nanos: 54000000
        - - 3
          - secs: 0
            nanos: 61000000
      stake_weighted_median:
        secs: 0
        nanos: 54000000
  - - TransferObjects
    - observations:
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 95000000
        - - 6
          - secs: 0
            nanos: 41000000
        - - 2
          - secs: 0
            nanos: 48000000
      stake_weighted_median:
        secs: 0
        nanos: 48000000
  - - Upgrade
    - observations:
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 242000000
        - - 6
          - secs: 0
            nanos: 981000000
        - - 4
          - secs: 0
            nanos: 587000000
      stake_weighted_median:
        secs: 0
        nanos: 587000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 9
          - secs: 0
            nanos: 71000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 6
          - secs: 0
            nanos: 476000000
        - - 3
          - secs: 0
            nanos: 370000000
        - - 6
          - secs: 0
            nanos: 176000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 476000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 744000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 380000000
  - - transfer_objects_3_items
    - secs: 0
      nanos: 192000000
  - - split_coins_3_amounts
    - secs: 0
      nanos: 216000000
  - - merge_coins_1_sources
    - secs: 0
      nanos: 126000000
  - - make_move_vec_6_elements
    - secs: 0
      nanos: 175000000
  - - mixed_commands
    - secs: 0
      nanos: 253000000
  - - upgrade_package
    - secs: 0
      nanos: 587000000
