crates/rtd-core/src/authority/snapshots/rtd_core__authority__execution_time_estimator__tests__execution_time_observer_v138.snap
---
source: crates/rtd-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 138
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 0
          - ~
        - - 4
          - secs: 0
            nanos: 28000000
        - - 6
          - secs: 0
            nanos: 16000000
        - - 10
          - secs: 0
            nanos: 18000000
      stake_weighted_median:
        secs: 0
        nanos: 18000000
  - - MergeCoins
    - observations:
        - - 8
          - secs: 0
            nanos: 22000000
        - - 1
          - secs: 0
            nanos: 21000000
        - - 2
          - secs: 0
            nanos: 32000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 22000000
  - - SplitCoins
    - observations:
        - - 10
          - secs: 0
            nanos: 42000000
        - - 1
          - secs: 0
            nanos: 73000000
        - - 9
          - secs: 0
            nanos: 74000000
        - - 3
          - secs: 0
            nanos: 61000000
      stake_weighted_median:
        secs: 0
        nanos: 73000000
  - - TransferObjects
    - observations:
        - - 10
          - secs: 0
            nanos: 55000000
        - - 3
          - secs: 0
            nanos: 24000000
        - - 5
          - secs: 0
            nanos: 98000000
        - - 7
          - secs: 0
            nanos: 24000000
      stake_weighted_median:
        secs: 0
        nanos: 55000000
  - - Upgrade
    - observations:
        - - 9
          - secs: 0
            nanos: 615000000
        - - 8
          - secs: 0
            nanos: 531000000
        - - 8
          - secs: 0
            nanos: 101000000
        - - 4
          - secs: 0
            nanos: 587000000
      stake_weighted_median:
        secs: 0
        nanos: 587000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 0
          - ~
        - - 10
          - secs: 0
            nanos: 57000000
        - - 2
          - secs: 0
            nanos: 142000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 142000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 410000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 336000000
  - - transfer_objects_2_items
    - secs: 0
      nanos: 165000000
  - - split_coins_4_amounts
    - secs: 0
      nanos: 365000000
  - - merge_coins_1_sources
    - secs: 0
      nanos: 44000000
  - - make_move_vec_1_elements
    - secs: 0
      nanos: 36000000
  - - mixed_commands
    - secs: 0
      nanos: 312000000
  - - upgrade_package
    - secs: 0
      nanos: 587000000
