crates/rtd-core/src/authority/snapshots/rtd_core__authority__execution_time_estimator__tests__execution_time_observer_v88.snap
---
source: crates/rtd-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 88
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 0
          - ~
        - - 9
          - secs: 0
            nanos: 16000000
        - - 5
          - secs: 0
            nanos: 19000000
        - - 1
          - secs: 0
            nanos: 25000000
      stake_weighted_median:
        secs: 0
        nanos: 19000000
  - - MergeCoins
    - observations:
        - - 8
          - secs: 0
            nanos: 63000000
        - - 9
          - secs: 0
            nanos: 15000000
        - - 7
          - secs: 0
            nanos: 65000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 63000000
  - - SplitCoins
    - observations:
        - - 0
          - ~
        - - 8
          - secs: 0
            nanos: 50000000
        - - 5
          - secs: 0
            nanos: 54000000
        - - 5
          - secs: 0
            nanos: 32000000
      stake_weighted_median:
        secs: 0
        nanos: 50000000
  - - TransferObjects
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 0
          - ~
        - - 4
          - secs: 0
            nanos: 35000000
      stake_weighted_median:
        secs: 0
        nanos: 35000000
  - - Upgrade
    - observations:
        - - 10
          - secs: 0
            nanos: 375000000
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 981000000
        - - 7
          - secs: 0
            nanos: 528000000
      stake_weighted_median:
        secs: 0
        nanos: 528000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 7
          - secs: 0
            nanos: 404000000
        - - 6
          - secs: 0
            nanos: 162000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 10
          - secs: 0
            nanos: 178000000
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 0
          - ~
        - - 0
          - ~
        - - 2
          - secs: 0
            nanos: 142000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 499000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 767000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 334000000
  - - transfer_objects_1_items
    - secs: 0
      nanos: 70000000
  - - split_coins_1_amounts
    - secs: 0
      nanos: 100000000
  - - merge_coins_1_sources
    - secs: 0
      nanos: 126000000
  - - make_move_vec_4_elements
    - secs: 0
      nanos: 95000000
  - - mixed_commands
    - secs: 0
      nanos: 206000000
  - - upgrade_package
    - secs: 0
      nanos: 528000000
