crates/rtd-core/src/authority/snapshots/rtd_core__authority__execution_time_estimator__tests__execution_time_observer_v95.snap
---
source: crates/rtd-core/src/authority/execution_time_estimator.rs
expression: snapshot_data
---
protocol_version: 95
consensus_observations:
  - - MakeMoveVec
    - observations:
        - - 9
          - secs: 0
            nanos: 15000000
        - - 4
          - secs: 0
            nanos: 28000000
        - - 5
          - secs: 0
            nanos: 19000000
        - - 9
          - secs: 0
            nanos: 16000000
      stake_weighted_median:
        secs: 0
        nanos: 19000000
  - - MergeCoins
    - observations:
        - - 6
          - secs: 0
            nanos: 63000000
        - - 1
          - secs: 0
            nanos: 21000000
        - - 2
          - secs: 0
            nanos: 32000000
        - - 7
          - secs: 0
            nanos: 0
      stake_weighted_median:
        secs: 0
        nanos: 32000000
  - - SplitCoins
    - observations:
        - - 0
          - ~
        - - 3
          - secs: 0
            nanos: 28000000
        - - 5
          - secs: 0
            nanos: 54000000
        - - 3
          - secs: 0
            nanos: 61000000
      stake_weighted_median:
        secs: 0
        nanos: 54000000
  - - TransferObjects
    - observations:
        - - 9
          - secs: 0
            nanos: 91000000
        - - 9
          - secs: 0
            nanos: 81000000
        - - 1
          - secs: 0
            nanos: 67000000
        - - 6
          - secs: 0
            nanos: 15000000
      stake_weighted_median:
        secs: 0
        nanos: 81000000
  - - Upgrade
    - observations:
        - - 0
          - ~
        - - 6
          - secs: 0
            nanos: 145000000
        - - 6
          - secs: 0
            nanos: 981000000
        - - 4
          - secs: 0
            nanos: 587000000
      stake_weighted_median:
        secs: 0
        nanos: 587000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000001"
        module: coin
        function: transfer
        type_arguments: []
    - observations:
        - - 9
          - secs: 0
            nanos: 324000000
        - - 10
          - secs: 0
            nanos: 243000000
        - - 9
          - secs: 0
            nanos: 268000000
        - - 0
          - ~
      stake_weighted_median:
        secs: 0
        nanos: 268000000
  - - MoveEntryPoint:
        package: "0x0000000000000000000000000000000000000000000000000000000000000002"
        module: nft
        function: mint
        type_arguments: []
    - observations:
        - - 0
          - ~
        - - 9
          - secs: 0
            nanos: 198000000
        - - 8
          - secs: 0
            nanos: 387000000
        - - 8
          - secs: 0
            nanos: 499000000
      stake_weighted_median:
        secs: 0
        nanos: 387000000
transaction_estimates:
  - - coin_transfer_call
    - secs: 0
      nanos: 268000000
  - - mixed_move_calls
    - secs: 0
      nanos: 655000000
  - - native_commands_with_observations
    - secs: 0
      nanos: 372000000
  - - transfer_objects_4_items
    - secs: 0
      nanos: 405000000
  - - split_coins_3_amounts
    - secs: 0
      nanos: 216000000
  - - merge_coins_3_sources
    - secs: 0
      nanos: 128000000
  - - make_move_vec_5_elements
    - secs: 0
      nanos: 114000000
  - - mixed_commands
    - secs: 0
      nanos: 352000000
  - - upgrade_package
    - secs: 0
      nanos: 587000000
